syntax = "proto3";

package rpc.v1;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/yuorei/yuorei-ads/gen/rpc/ads/v1;adsv1";

// Campaign Management Service
service AdManagementService {
    // Campaign Management
    rpc CreateCampaign(CreateCampaignRequest) returns (CreateCampaignResponse);
    // rpc GetCampaign(GetCampaignRequest) returns (GetCampaignResponse);
    // rpc UpdateCampaign(UpdateCampaignRequest) returns (UpdateCampaignResponse);
    // rpc DeleteCampaign(DeleteCampaignRequest) returns (DeleteCampaignResponse);

    // // Ad Group Management
    // rpc CreateAdGroup(CreateAdGroupRequest) returns (CreateAdGroupResponse);
    // rpc GetAdGroup(GetAdGroupRequest) returns (GetAdGroupResponse);
    // rpc UpdateAdGroup(UpdateAdGroupRequest) returns (UpdateAdGroupResponse);
    // rpc DeleteAdGroup(DeleteAdGroupRequest) returns (DeleteAdGroupResponse);

    // // Ad Management
    // rpc CreateAd(CreateAdRequest) returns (CreateAdResponse);
    // rpc GetAd(GetAdRequest) returns (GetAdResponse);
    // rpc UpdateAd(UpdateAdRequest) returns (UpdateAdResponse);
    // rpc DeleteAd(DeleteAdRequest) returns (DeleteAdResponse);

    // // Targeting
    // rpc CreateTargeting(CreateTargetingRequest) returns (CreateTargetingResponse);
    // rpc GetTargeting(GetTargetingRequest) returns (GetTargetingResponse);
    // rpc UpdateTargeting(UpdateTargetingRequest) returns (UpdateTargetingResponse);
    // rpc DeleteTargeting(DeleteTargetingRequest) returns (DeleteTargetingResponse);

    // // Reporting
    // rpc GetAdPerformanceReport(GetAdPerformanceReportRequest) returns (GetAdPerformanceReportResponse);
}

// Campaign messages
message CreateCampaignRequest {
    string name = 1;
    int32 budget = 2;
    string start_date = 3;
    string end_date = 4;
}

message CreateCampaignResponse {
    string campaign_id = 1;
}

message GetCampaignRequest {
    string campaign_id = 1;
}

message GetCampaignResponse {
    Campaign campaign = 1;
}

message UpdateCampaignRequest {
    string campaign_id = 1;
    string name = 2;
    int32 budget = 3;
    string start_date = 4;
    string end_date = 5;
    bool is_approval = 6;
}

message UpdateCampaignResponse {
    Campaign campaign = 1;
}

message DeleteCampaignRequest {
    string campaign_id = 1;
}

message DeleteCampaignResponse {
    bool success = 1;
}

message Campaign {
    string campaign_id = 1;
    string user_id = 2;
    string name = 3;
    int32 budget = 4;
    string start_date = 5;
    string end_date = 6;
    bool is_approval = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp deleted_at = 10;
}

// Ad Group messages
message CreateAdGroupRequest {
    string campaign_id = 1;
    string name = 2;
}

message CreateAdGroupResponse {
    string ad_group_id = 1;
}

message GetAdGroupRequest {
    string ad_group_id = 1;
}

message GetAdGroupResponse {
    AdGroup ad_group = 1;
}

message UpdateAdGroupRequest {
    string ad_group_id = 1;
    string name = 2;
}

message UpdateAdGroupResponse {
    AdGroup ad_group = 1;
}

message DeleteAdGroupRequest {
    string ad_group_id = 1;
}

message DeleteAdGroupResponse {
    bool success = 1;
}

message AdGroup {
    string ad_group_id = 1;
    string campaign_id = 2;
    string name = 3;
    bool is_approval = 4;
}

// Ad messages
message CreateAdRequest {
    string ad_group_id = 1;
    string type = 2;
    string content = 3;
}

message CreateAdResponse {
    string ad_id = 1;
}

message GetAdRequest {
    string ad_id = 1;
}

message GetAdResponse {
    Ad ad = 1;
}

message UpdateAdRequest {
    string ad_id = 1;
    string type = 2;
    string content = 3;
}

message UpdateAdResponse {
    Ad ad = 1;
}

message DeleteAdRequest {
    string ad_id = 1;
}

message DeleteAdResponse {
    bool success = 1;
}

message Ad {
    string ad_id = 1;
    string ad_group_id = 2;
    string type = 3;
    string content = 4;
    bool is_approval = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp deleted_at = 8;
}

// Targeting messages
message CreateTargetingRequest {
    string ad_id = 1;
    repeated Target targets = 2;
}

message CreateTargetingResponse {
    string targeting_id = 1;
}

message GetTargetingRequest {
    string targeting_id = 1;
}

message GetTargetingResponse {
    Targeting targeting = 1;
}

message UpdateTargetingRequest {
    string targeting_id = 1;
    repeated Target targets = 2;
}

message UpdateTargetingResponse {
    Targeting targeting = 1;
}

message DeleteTargetingRequest {
    string targeting_id = 1;
}

message DeleteTargetingResponse {
    bool success = 1;
}

message Targeting {
    string targeting_id = 1;
    string ad_id = 2;
    repeated Target targets = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    google.protobuf.Timestamp deleted_at = 6;
}

message Target {
    string type = 1;
    string value = 2;
}

// Reporting messages
message GetAdPerformanceReportRequest {
    string ad_id = 1;
    string start_date = 2;
    string end_date = 3;
}

message GetAdPerformanceReportResponse {
    repeated AdPerformance ad_performances = 1;
}

message AdPerformance {
    string date = 1;
    int32 impressions = 2;
    int32 clicks = 3;
    float ctr = 4;
}
