syntax = "proto3";

package rpc.v1;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/yuorei/yuorei-ads/gen/rpc/organization/v1;organizationv1";

service OrganizationService {
    rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse);
    rpc CreateTmpOrganization(CreateTmpSaveOrganizationRequest) returns (CreateOrganizationResponse);
}

message Organization {
    string organization_id = 1;
    string organization_name = 2;
    string representative_user_id = 3;
    string purpose = 4;
    string category = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp deleted_at = 8;
}

message CreateOrganizationRequest {
    string organization_id = 1;
    string client_id = 2;
    string client_secret = 3;
}

message CreateTmpSaveOrganizationRequest {
    string organization_id = 1;
    string organization_name = 2;
    string representative_uesr_id = 3;
    string purpose = 5;
    string category = 6;
    string client_id = 7;
    string client_secret = 8;
}

message CreateOrganizationResponse {
    string organization_id = 1;
}